# ESP32-WQMS-v1

./: .gitignore  CMakeLists.txt  app password.txt  filelist.txt  partitions.csv  sdkconfig  sdkconfig.defaults
Scada/: machine.lic
Scada/ovascada/: MikrodevScada.ini  intro.sca  ovascada.scapro  ovascada.tcf
Scada/ovascada/tmp/: modbus.ini
ScadaNodeWebApi_v1.2/: README.txt  config.js  index.js  package-lock.json  package.json  webapi.docx
ScadaNodeWebApi_v1.2/auth/: AuthController.js
ScadaNodeWebApi_v1.2/config/: database.js
ScadaNodeWebApi_v1.2/controllers/: active_alarms.js  alarms.js  channels.js  custom_view.js  rt_values.js  tags.js  users.js  write_buffer.js
ScadaNodeWebApi_v1.2/db_apis/: active_alarms.js  alarms.js  channels.js  custom_view.js  rt_values.js  tags.js  users.js  write_buffer.js
ScadaNodeWebApi_v1.2/services/: database_pg.js  web-server.js
esp-datasheets/: 38 pinout.txt  Analog to Digital Converter (ADC) Continuous Mode Driver - ESP32 - — ESP-IDF Programming Guide v6.0.2 documentation.url
main/: CMakeLists.txt  filelist.txt  idf_component.yml  main.c
main/automation/: automation_engine.c  rule_manager.c
main/drivers/: adc_dma.c  dht11.c
main/include/: adc_dma.h  api_config.h  api_handler.h  automation_engine.h  buffer_recovery.h  dht11.h  email_client.h  http_server.h  log_levels.h  log_rotate.h  logger.h  modbus_map.h  modbus_tcp.h  ntp_client.h  nvs_config.h  project_defs.h  relay_control.h  rule_manager.h  sensor_calib.h  sensor_history.h  sensor_read.h  spiffs_manager.h  system_config.h  watchdog.h  web_console.h  web_upload.h  webhook_notification.h  wifi_manager.h
main/integration/: buffer_recovery.c  web_upload.c  web_upload_task.c
main/logging/: log_rotate.c  logger.c
main/modbus/: modbus_tcp.c
main/notification/: webhook_notification.c
main/ntp/: ntp_client.c
main/relay/: relay_control.c
main/sensor/: sensor_calib.c  sensor_history.c  sensor_read.c
main/utils/: email_client.c  nvs_config.c  spiffs_manager.c  watchdog.c  wifi_manager.c
main/webserver/: api_config.c  api_handler.c  http_server.c  web_console.c
tools/: Find my ESP32.bat  WQMS-ESP Discovery - PS5.1.ps1  minimize.bat  minimize_html_css_js.ps1  readnvs.bat
web_assets/: api_doc.html  automation.html  calibration.html  config.html  console.html  index.html  style.css
web_assets/js/: api_docs.js  automation.js  calibration.js  chart.js  config.js  console.js  core.js  dashboard.js  router.js
